# hatsu-yakitori

./: .gitignore  .nojekyll  CITATION.cff  META.json  META.yml  Makefile  README.cs.md  README.de.md  README.es.md  README.ja.md  README.md  README.ru.md  README.zh-TW.md  app.js  boids.link  boids_main.link  boids_main.types.types  cartan-utils.import.scm  cartan_utils.import.scm  core.cartan_utils.import.scm  core.golay_frontier.import.scm  core.kak_decomposition.import.scm  core.machine_constants.import.scm  cross_validation.import.scm  debug_kak_test  fmm_on_goppa_grid.import.scm  golay-frontier.import.scm  golay24.profile  golay_frontier.import.scm  goppa-gc-mock.import.scm  hatsu-yakitori.build.sh  hatsu-yakitori.cabal  hatsu-yakitori.egg  hatsu-yakitori.install.sh  index.html  kak-decomposition.import.scm  kak-decomposition.link  kak_decomposition.import.scm  kak_decomposition.link  kak_decomposition.types.types  (+21 more)
.github/: FUNDING.yml
.stack-work/: stack.sqlite3
_build/: .shake.database
chicken-5.4.0/: chicken  chicken-config.h  chicken-defaults.h  chicken-do  chicken-install  chicken-profile  chicken-status  chicken-uninstall  csc  csi  (+1 more)
shake/: Chicken.hs  Clean.hs  Link.hs  Pipeline.hs  Rules.hs  Salmonella.hs  Shake.hs  SourceIO.hs  yakitori-shake.cabal
shake/.stack-work/: stack.sqlite3
shake/Rules/: Compile.hs  DebFMM.hs  GC.hs  Link.hs  MEEP.hs  ModuleLinking.hs  Quadcopter.hs  SBVModules.hs  StandardToplevel.hs  Wasm.hs
shake/Rules/Proof/: LLVM_IR.hs  Lean4.hs  Main.hs  SBV_Bridge.hs
shake/rules/: Shake.hs
shake/verification/: Verification.hs
(+293 files in other folders)
