name:                yakitori-shake
version:             0.1.0.0
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

executable shake
  main-is:             Shake.hs
  hs-source-dirs:      .
  build-depends:       base >=4.14,
                       shake >=0.19,
                       directory >=1.3
  default-language:    Haskell2010
  other-modules:       Build.Chicken
                       Build.Modules